--- a/historial_admin.html
+++ b/historial_admin.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Historico de Solicitudes </title>
+<title>Historico de Solicitudes</title>
 
 <style>
     /* Variables de Color (Consistencia Institucional) */
     :root {
-        --color-primary: #004d99; /* Azul marino/institucional */
+        --color-primary: #173753; /* Azul Oscuro Corporativo */
         --color-secondary: #28a745; 
         --color-info: #2196F3; 
         --color-warning: #ff9800;
         --color-muted: #6c757d;
-        --color-background: #eef1f5;
+        --color-background: #f0f2f5;
         --color-card: #ffffff;
         --color-text: #333333;
         --color-border: #cccccc;
@@ -21,51 +21,88 @@
 
     /* ---- ESTILO GENERAL ---- */
     body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
         background: var(--color-background);
         margin: 0;
         padding: 0;
         color: var(--color-text);
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        min-height: 100vh;
-    }
-    .container {
-        max-width: 1200px; 
-        width: 100%;
-        margin: 20px 15px;
-        background: var(--color-card);
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        box-sizing: border-box;
-    }
-    h2 {
-        text-align: center;
-        color: var(--color-primary);
-        margin-bottom: 25px;
-        font-size: 1.8em;
-        border-bottom: 2px solid var(--color-primary);
-        padding-bottom: 10px;
     }
 
-    /* ---- BOTÓN VOLVER ---- */
-    .btn-volver {
-        display: inline-block;
-        padding: 12px 18px;
-        background: var(--color-primary);
+    /* Banner Superior (INACAP) */
+    header {
+        background-color: var(--color-primary);
         color: white;
-        text-decoration: none;
-        border-radius: 6px;
-        font-size: 1em;
+        padding: 20px 40px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .header-title h1 {
+        font-size: 1.8em;
+        margin: 0;
+        font-weight: 700;
+    }
+
+    .header-info {
+        text-align: right;
+    }
+
+    .header-info h2 {
+        font-size: 1.4em;
+        margin: 0;
         font-weight: 600;
+        color: white;
+    }
+
+    .header-info p {
+        font-size: 0.9em;
+        margin: 5px 0 0;
+        color: #b0c4de;
+    }
+
+    .main-content {
+        max-width: 1200px;
+        margin: 20px auto;
+        padding: 0 20px;
+    }
+
+    /* ---- BOTÓN VOLVER (ESTILO AZUL) ---- */
+    .back-button-container {
         margin-bottom: 20px;
-        transition: background-color 0.3s;
     }
-    .btn-volver:hover {
-        background: #003a73;
+
+    .btn-menu {
+        background-color: #007bff;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        text-decoration: none;
+        font-weight: 600;
+        transition: background-color 0.2s;
+        display: inline-flex;
+        align-items: center;
     }
+
+    .btn-menu:hover {
+        background-color: #0056b3;
+    }
+
+    .btn-menu span {
+        margin-right: 8px;
+    }
+
+    /* Contenedor de la Tabla */
+    .container {
+        background: var(--color-card);
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+        box-sizing: border-box;
+    }
+
     /* ---- FILTROS ---- */
     .filter-box {
         display: flex;
@@ -81,30 +118,26 @@
         border: 1px solid var(--color-border);
         box-sizing: border-box;
     }
-    /* Campo de texto para buscar RUT */
     .filter-box input[type="text"] {
         flex-grow: 2; 
         min-width: 150px;
     }
-    /* Campos de fecha */
     .filter-box input[type="date"] {
         flex-grow: 1;
-        max-width: none;
         min-width: 120px;
     }
     .filter-box button {
-        flex-shrink: 0; 
         background: var(--color-secondary);
         color: white;
         border: none;
         cursor: pointer;
         font-weight: bold;
-        transition: background-color 0.3s;
     }
     .filter-box button:hover {
         background: #1e7e34;
     }
-    /* ---- TABLA RESPONSIVA ---- */
+
+    /* ---- TABLA ---- */
     .tabla-wrapper {
         overflow-x: auto;
     }
@@ -134,29 +167,21 @@
         background-color: #f8f8f8;
     }
 
-    /* Botones de Acción dentro de la Tabla */
-    .btn {
+    .btn-materiales {
         padding: 8px 10px;
         border: none;
         border-radius: 6px;
         cursor: pointer;
         font-size: 0.9em;
-        margin: 4px 0;
         width: 100%;
         max-width: 120px;
         display: block;
         font-weight: 600;
         text-align: center;
-        transition: background-color 0.2s;
-    }
-
-    .btn-materiales {
         background: var(--color-info);
         color: white;
     }
-    .btn-materiales:hover { background: #1377c0; }
 
-    /* MENSAJE */
     .mensaje-vacio {
         text-align: center;
         padding: 20px;
@@ -165,8 +190,6 @@
         color: #8f6509;
         border-radius: 8px;
         margin-top: 20px;
-        font-size: 1.1em;
-        font-weight: 500;
     }
 
     /* MODAL */
@@ -175,21 +198,18 @@
         position: fixed;
         z-index: 1000;
         inset: 0;
-        background: rgba(0,0,0,0.7);
+        background: rgba(0,0,0,0.5);
         justify-content: center;
         align-items: center;
         padding: 20px;
     }
-
     .modal-content {
         background: var(--color-card);
         width: 100%;
         max-width: 550px;
         padding: 30px;
         border-radius: 10px;
-        box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     }
-
     .modal-header {
         font-size: 1.3em;
         font-weight: bold;
@@ -198,91 +218,68 @@
         border-bottom: 2px solid var(--color-primary);
         padding-bottom: 10px;
     }
-
     .close-btn {
         float: right;
         cursor: pointer;
         font-size: 24px;
-        font-weight: normal;
         color: #dc3545;
-        line-height: 1;
-    }
-    
-    .modal-content table {
-        min-width: unset;
-    }
-    .modal-content table th {
-        background: var(--color-info);
     }
 
-    /* RESPONSIVE */
-    @media (max-width: 992px) {
-        .filter-box {
-            flex-basis: 100%;
-        }
-    }
     @media (max-width: 768px) {
-        .filter-box input[type="text"] {
-            flex-basis: 100%;
-        }
-        .filter-box input[type="date"] {
-            flex-basis: calc(50% - 8px);
-        }
-        .filter-box button {
-            flex-basis: 100%;
-        }
-    }
-    @media (max-width: 600px) {
-        h2 {
-            font-size: 1.6em;
-        }
-        .container {
-            padding: 20px;
-        }
-        .btn-volver {
-            width: 100%;
-            text-align: center;
-        }
+        header { flex-direction: column; text-align: center; gap: 10px; }
+        .header-info { text-align: center; }
+        .filter-box input[type="date"] { flex-basis: calc(50% - 8px); }
     }
 </style>
 </head>
 <body>
 
-<div class="container">
+<header>
+    <div class="header-title">
+        <h1>Histórico de Solicitudes</h1>
+    </div>
+    <div class="header-info">
+        <h2>INACAP</h2>
+        <p>Área Energía y Automatización, Electrónica y Robótica</p>
+    </div>
+</header>
 
-    <a href="menu.html" class="btn-volver">⬅ Volver al Menú </a>
-
-    <h2>Panel Historico de Solicitudes 📊</h2>
-
-    <div class="filter-box">
-        <input type="text" id="filtro-rut" placeholder="Buscar por RUT del Solicitante">
-        <input type="date" id="desde" placeholder="Desde Fecha de Entrega">
-        <input type="date" id="hasta" placeholder="Hasta Fecha de Entrega">
-        <button id="btn-buscar">Buscar / Filtrar</button>
+<div class="main-content">
+    <div class="back-button-container">
+        <a href="menu.html" class="btn-menu">
+            <span>&#x2190;</span> Volver al Menú
+        </a>
     </div>
 
-    <div class="tabla-wrapper">
-        <table>
-            <thead>
-                <tr>
-                    <th style="width: 5%;">ID</th>
-                    <th style="width: 15%;">RUT Solicitante</th>
-                    <th style="width: 20%;">Nombre Solicitante</th>
-                    <th style="width: 25%;">Asignatura/Área</th>
-                    <th style="width: 15%;">Email Solicitante</th>
-                    <th style="width: 10%;">F. Entrega</th>
-                    <th style="width: 10%;">Acciones</th>
-                </tr>
-            </thead>
-            <tbody id="tabla-historial">
-                </tbody>
-        </table>
-    </div>
+    <div class="container">
+        <div class="filter-box">
+            <input type="text" id="filtro-rut" placeholder="Buscar por RUT del Solicitante">
+            <input type="date" id="desde">
+            <input type="date" id="hasta">
+            <button id="btn-buscar">Buscar / Filtrar</button>
+        </div>
 
-    <div id="sin-datos" class="mensaje-vacio" style="display:none;">
-        ⚠️ No se encontraron solicitudes entregadas en el historial.
-    </div>
+        <div class="tabla-wrapper">
+            <table>
+                <thead>
+                    <tr>
+                        <th style="width: 5%;">ID</th>
+                        <th style="width: 15%;">RUT Solicitante</th>
+                        <th style="width: 20%;">Nombre Solicitante</th>
+                        <th style="width: 25%;">Asignatura/Área</th>
+                        <th style="width: 15%;">Email Solicitante</th>
+                        <th style="width: 10%;">F. Entrega</th>
+                        <th style="width: 10%;">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody id="tabla-historial"></tbody>
+            </table>
+        </div>
 
+        <div id="sin-datos" class="mensaje-vacio" style="display:none;">
+            ⚠️ No se encontraron solicitudes entregadas en el historial.
+        </div>
+    </div>
 </div>
 
 <div class="modal" id="modal-materiales">
@@ -302,6 +299,9 @@
         </div>
     </div>
 </div>
+
+</body>
+</html>
     
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
