--- a/panel_admin.html
+++ b/panel_admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de solicitudes</title>
+    <title>Panel de Administración INACAP</title>
 
     <style>
         /* Tipografía y Base */
@@ -282,11 +282,11 @@
 
     <header>
         <div class="header-title">
-            <h1>Gestor de solicitudes</h1>
+            <h1>Gestor de solicitudes </h1>
         </div>
         <div class="header-info">
             <h2>INACAP</h2>
-            <p>Área Energía y Área Automatización Electrónica y Robótica</p>
+            <p>Área Energía y Área Automatización, Electrónica y Robótica</p>
         </div>
     </header>
 
